tests/ui/type-alias-impl-trait/indirect-recursion-issue-112047.stderr
error[E0733]: recursion in an async block requires boxing
  --> $DIR/indirect-recursion-issue-112047.rs:22:9
   |
LL |         async move { recur(self).await; }
   |         ^^^^^^^^^^
   |
   = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0733`.
